--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -104,3 +104,11 @@
     margin: 16px 0 16px 0;
     padding: 0 5px 0 5px;
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 644px;
+    height: 20px;
+    margin: 0 auto;
+}
