--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -8,6 +8,8 @@
               th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.css}"/>
         <link rel="stylesheet"
               th:href="@{/css/styles.css}"/>
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}">
+        <link rel="stylesheet" th:href="@{/webjars/mdbootstrap-bootstrap-material-design/4.8.8/css/mdb.css}">
     </th:block>
 </head>
 <body>
@@ -51,10 +53,17 @@
     </footer>
 </th:block>
 
+
 <th:block th:fragment="scripts">
     <script th:src="@{/webjars/jquery/3.3.1/jquery.min.js}"></script>
     <script th:src="@{/webjars/popper.js/1.14.3/popper.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
 </th:block>
+<footer th:fragment="footer" class="footer">
+    <footer class="container">
+        <p class="float-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2019-2020 F.Trela, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    </footer>
+</footer>
 </body>
 </html>
