--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,109 +1,109 @@
-.bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
+/*.bd-placeholder-img {*/
+    /*font-size: 1.125rem;*/
+    /*text-anchor: middle;*/
+    /*-webkit-user-select: none;*/
+    /*-moz-user-select: none;*/
+    /*-ms-user-select: none;*/
+    /*user-select: none;*/
+/*}*/
 
-@media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-    }
-}
+/*@media (min-width: 768px) {*/
+    /*.bd-placeholder-img-lg {*/
+        /*font-size: 3.5rem;*/
+    /*}*/
+/*}*/
 
-.container {
-    max-width: 960px;
-}
+/*.container {*/
+    /*max-width: 960px;*/
+/*}*/
 
-/*
- * Custom translucent site header
- */
+/*!**/
+ /** Custom translucent site header*/
+ /**!*/
 
-.site-header {
-    background-color: rgba(0, 0, 0, .85);
-    -webkit-backdrop-filter: saturate(180%) blur(20px);
-    backdrop-filter: saturate(180%) blur(20px);
-}
-.site-header a {
-    color: #999;
-    transition: ease-in-out color .15s;
-}
-.site-header a:hover {
-    color: #fff;
-    text-decoration: none;
-}
+/*.site-header {*/
+    /*background-color: #976364;*/
+    /*-webkit-backdrop-filter: saturate(180%) blur(20px);*/
+    /*backdrop-filter: saturate(180%) blur(20px);*/
+/*}*/
+/*.site-header a {*/
+    /*color: #999;*/
+    /*transition: ease-in-out color .15s;*/
+/*}*/
+/*.site-header a:hover {*/
+    /*color: #fff;*/
+    /*text-decoration: none;*/
+/*}*/
 
-/*
- * Dummy devices (replace them with your own or something else entirely!)
- */
+/*!**/
+ /** Dummy devices (replace them with your own or something else entirely!)*/
+ /**!*/
 
-.product-device {
-    position: absolute;
-    right: 10%;
-    bottom: -30%;
-    width: 300px;
-    height: 540px;
-    background-color: #333;
-    border-radius: 21px;
-    -webkit-transform: rotate(30deg);
-    transform: rotate(30deg);
-}
+/*.product-device {*/
+    /*position: absolute;*/
+    /*right: 10%;*/
+    /*bottom: -30%;*/
+    /*width: 300px;*/
+    /*height: 540px;*/
+    /*background-color: #333;*/
+    /*border-radius: 21px;*/
+    /*-webkit-transform: rotate(30deg);*/
+    /*transform: rotate(30deg);*/
+/*}*/
 
-.product-device::before {
-    position: absolute;
-    top: 10%;
-    right: 10px;
-    bottom: 10%;
-    left: 10px;
-    content: "";
-    background-color: rgba(255, 255, 255, .1);
-    border-radius: 5px;
-}
+/*.product-device::before {*/
+    /*position: absolute;*/
+    /*top: 10%;*/
+    /*right: 10px;*/
+    /*bottom: 10%;*/
+    /*left: 10px;*/
+    /*content: "";*/
+    /*background-color: rgba(255, 255, 255, .1);*/
+    /*border-radius: 5px;*/
+/*}*/
 
-.product-device-2 {
-    top: -25%;
-    right: auto;
-    bottom: 0;
-    left: 5%;
-    background-color: #e5e5e5;
-}
+/*.product-device-2 {*/
+    /*top: -25%;*/
+    /*right: auto;*/
+    /*bottom: 0;*/
+    /*left: 5%;*/
+    /*background-color: #e5e5e5;*/
+/*}*/
 
 
-/*
- * Extra utilities
- */
+/*!**/
+ /** Extra utilities*/
+ /**!*/
 
-.flex-equal > * {
-    -ms-flex: 1;
-    flex: 1;
-}
-@media (min-width: 768px) {
-    .flex-md-equal > * {
-        -ms-flex: 1;
-        flex: 1;
-    }
-}
+/*.flex-equal > * {*/
+    /*-ms-flex: 1;*/
+    /*flex: 1;*/
+/*}*/
+/*@media (min-width: 768px) {*/
+    /*.flex-md-equal > * {*/
+        /*-ms-flex: 1;*/
+        /*flex: 1;*/
+    /*}*/
+/*}*/
 
-.overflow-hidden { overflow: hidden; }
+/*.overflow-hidden { overflow: hidden; }*/
 
-.form-container{
-    margin: 50px 0 100px 0;
-    padding: 0 12px 0 12px;
-    box-shadow: 1px 1px 5px 10px #CCCCCC;
-    align-items: center;
-}
+/*.form-container{*/
+    /*margin: 50px 0 100px 0;*/
+    /*padding: 0 12px 0 12px;*/
+    /*box-shadow: 1px 1px 5px 10px #CCCCCC;*/
+    /*align-items: center;*/
+/*}*/
 
-.form-input-row{
-    margin: 16px 0 16px 0;
-    padding: 0 5px 0 5px;
-}
+/*.form-input-row{*/
+    /*margin: 16px 0 16px 0;*/
+    /*padding: 0 5px 0 5px;*/
+/*}*/
 
-.form-button-row{
-    margin: 16px 0 16px 0;
-    padding: 0 5px 0 5px;
-}
+/*.form-button-row{*/
+    /*margin: 16px 0 16px 0;*/
+    /*padding: 0 5px 0 5px;*/
+/*}*/
 
 .footer {
     position: absolute;
@@ -111,4 +111,40 @@
     width: 644px;
     height: 20px;
     margin: 0 auto;
+}
+
+html,
+body,
+header,
+.view {
+    height: 100%;
+}
+@media (max-width: 740px) {
+    html,
+    body,
+    header,
+    .view {
+        height: 100vh;
+    }
+}
+.top-nav-collapse {
+    background-color: #78909c !important;
+}
+.navbar:not(.top-nav-collapse) {
+    background: transparent !important;
+}
+@media (max-width: 991px) {
+    .navbar:not(.top-nav-collapse) {
+        background: #78909c !important;
+    }
+}
+h1 {
+    letter-spacing: 8px;
+}
+h5 {
+    letter-spacing: 3px;
+}
+.hr-light {
+    border-top: 3px solid #fff;
+    width: 80px;
 }
