--- a/src/main/resources/templates/questionnaire-list.html
+++ b/src/main/resources/templates/questionnaire-list.html
@@ -13,11 +13,11 @@
     <div class="row col-md-12">
         <div class="row col-md-12 list-header-row">
             <div class="col-xs-4 col-sm-2 col-md-1">Id</div>
-            <div class="col-xs-8 col-sm-4 col-2">Questionnaire title</div>
-            <div class="col-xs-12 col-sm-6 col-3">Questionnaire description</div>
-            <div class="col-xs-6 col-sm-2 col-1">Questionnaire adding date</div>
-            <div class="col-xs-6 col-sm-2 col-1">Questionnaire ending date</div>
-            <div class="col-xs-12 col-sm-8 col-4"><!--Buttons--></div>
+            <div class="col-xs-8 col-sm-4 col-md-2">Questionnaire title</div>
+            <div class="col-xs-12 col-sm-6 col-md-3">Questionnaire description</div>
+            <div class="col-xs-6 col-sm-2 col-md-1">Questionnaire adding date</div>
+            <div class="col-xs-6 col-sm-2 col-md-1">Questionnaire ending date</div>
+            <div class="col-xs-12 col-sm-8 col-md-4"><!--Buttons--></div>
         </div>
         <div th:each="quest : ${questionnaires}" class="row col-md-12 list-data-row">
             <div class="col-1" th:text="${quest.getId()}"></div>
