--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,32 +14,62 @@
 </head>
 <body>
 <th:block th:fragment="navigator">
-    <nav class="site-header sticky-top py-1">
-        <div class="container d-flex flex-column flex-md-row justify-content-between">
+    <!--<nav class="site-header sticky-top py-1">-->
+        <!--<div class="container d-flex flex-column flex-md-row justify-content-between">-->
+            <!--<a class="py-2" href="#">-->
+                <!--<img th:src="@{/image/logo2.png}" class="col-md-1">-->
+            <!--</a>-->
+            <!--<a class="py-2 d-none d-md-inline-block" th:href="@{/}">Home</a>-->
+            <!--<a class="py-2 d-none d-md-inline-block" sec:authorize="hasRole('ADMIN')" th:href="@{/tylkodlakozakow}">Kozaki</a>-->
+            <!--<a class="py-2 d-none d-md-inline-block" sec:authorize="hasRole('ADMIN')" th:href="@{/admin/account/list}">Account list</a>-->
+            <!--<div class="py-2 d-none d-md-inline-block">-->
+                <!--<a class="maj-2 d-none d-md-inline-block" sec:authorize="!isAuthenticated()"-->
+                   <!--th:href="@{/login}">Login</a>-->
+                <!--<a class="maj-2 d-none d-md-inline-block" sec:authorize="!isAuthenticated()"-->
+                   <!--th:href="@{/user/register}">Register</a>-->
+                <!--<a class="maj-2 d-none d-md-inline-block" sec:authorize="isAuthenticated()"-->
+                   <!--th:href="@{/logout}">Logout</a>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</nav>-->
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top py-2 scrolling-navbar">
+        <div class="container">
             <a class="py-2" href="#">
-                <!--<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"-->
-                <!--stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img"-->
-                <!--viewBox="0 0 24 24" focusable="false">-->
-                <!--<title>Security</title>-->
-                <!---->
-                <!--<circle cx="12" cy="12" r="10"/>-->
-                <!--<path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/>-->
-                <!--</svg>-->
-                <img th:src="@{/image/logo2.png}" class="col-md-1">
+                <img th:src="@{/image/logo2.png}" class="col-md-2">
             </a>
-            <a class="py-2 d-none d-md-inline-block" th:href="@{/}">Home</a>
-            <a class="py-2 d-none d-md-inline-block" sec:authorize="hasRole('ADMIN')" th:href="@{/tylkodlakozakow}">Kozaki</a>
-            <a class="py-2 d-none d-md-inline-block" th:href="@{/admin/account/list}">Account list</a>
-            <div class="py-2 d-none d-md-inline-block">
-                <a class="maj-2 d-none d-md-inline-block" sec:authorize="!isAuthenticated()"
-                   th:href="@{/login}">Login</a>
-                <a class="maj-2 d-none d-md-inline-block" sec:authorize="!isAuthenticated()"
-                   th:href="@{/user/register}">Register</a>
-                <a class="maj-2 d-none d-md-inline-block" sec:authorize="isAuthenticated()"
-                   th:href="@{/logout}">Logout</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item ">
+                        <a class="nav-link" th:href="@{/}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/admin/account/list}">Account list</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Profile</a>
+                    </li>
+                </ul>
+                <form class="form-inline">
+                    <div class="md-form my-0">
+                        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                    </div>
+                </form>
+                <div class="py-2 d-none d-md-inline-block">
+                    <a class="maj-2 d-none d-md-inline-block" sec:authorize="!isAuthenticated()"
+                       th:href="@{/login}">Login</a>
+                    <a class="maj-2 d-none d-md-inline-block" sec:authorize="!isAuthenticated()"
+                       th:href="@{/user/register}">Register</a>
+                    <a class="maj-2 d-none d-md-inline-block" sec:authorize="isAuthenticated()"
+                       th:href="@{/logout}">Logout</a>
+                </div>
             </div>
         </div>
     </nav>
+    <!-- Navbar -->
 </th:block>
 
 
