--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -7,7 +7,7 @@
     user-select: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 900px) {
     .bd-placeholder-img-lg {
         font-size: 3.5rem;
     }
@@ -79,7 +79,7 @@
     -ms-flex: 1;
     flex: 1;
 }
-@media (min-width: 768px) {
+@media (min-width: 900px) {
     .flex-md-equal > * {
         -ms-flex: 1;
         flex: 1;
@@ -119,7 +119,7 @@ header,
 .view {
     height: 100%;
 }
-@media (max-width: 740px) {
+@media (max-width: 900px) {
     html,
     body,
     header,
@@ -147,4 +147,9 @@ h5 {
 .hr-light {
     border-top: 3px solid #fff;
     width: 80px;
+}
+
+.nav-link {
+    background-color: #333333;
+
 }
