--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,40 +14,23 @@
 </head>
 <body>
 <th:block th:fragment="navigator">
-    <!--<nav class="site-header sticky-top py-1">-->
-        <!--<div class="container d-flex flex-column flex-md-row justify-content-between">-->
-            <!--<a class="py-2" href="#">-->
-                <!--<img th:src="@{/image/logo2.png}" class="col-md-1">-->
-            <!--</a>-->
-            <!--<a class="py-2 d-none d-md-inline-block" th:href="@{/}">Home</a>-->
-            <!--<a class="py-2 d-none d-md-inline-block" sec:authorize="hasRole('ADMIN')" th:href="@{/tylkodlakozakow}">Kozaki</a>-->
-            <!--<a class="py-2 d-none d-md-inline-block" sec:authorize="hasRole('ADMIN')" th:href="@{/admin/account/list}">Account list</a>-->
-            <!--<div class="py-2 d-none d-md-inline-block">-->
-                <!--<a class="maj-2 d-none d-md-inline-block" sec:authorize="!isAuthenticated()"-->
-                   <!--th:href="@{/login}">Login</a>-->
-                <!--<a class="maj-2 d-none d-md-inline-block" sec:authorize="!isAuthenticated()"-->
-                   <!--th:href="@{/user/register}">Register</a>-->
-                <!--<a class="maj-2 d-none d-md-inline-block" sec:authorize="isAuthenticated()"-->
-                   <!--th:href="@{/logout}">Logout</a>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</nav>-->
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top py-2 scrolling-navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top fixed-top scrolling-navbar">
         <div class="container">
-            <a class="py-2" href="#">
+            <a class="py-2" th:href="@{/public/listQuestionnaire}">
                 <img th:src="@{/image/logo2.png}" class="col-md-2">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
+                    aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item ">
+                    <li class="nav-item active">
                         <a class="nav-link" th:href="@{/}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/admin/account/list}">Account list</a>
+                        <a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/admin/account/list}">Account
+                            list</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Profile</a>
@@ -73,8 +56,8 @@
 </th:block>
 
 
-<th:block th:fragment="footer" >
-    <footer class="container footer" >
+<th:block th:fragment="footer">
+    <footer class="container footer">
         <p class="float-right"><a href="#">Back to top</a></p>
         <p>&copy; 2019-2020 F.Trela & P.Stefanowski, Inc. &middot; <a href="#">Privacy</a> &middot; <a
                 href="#">Terms</a></p>
