--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,40 +14,42 @@
 </head>
 <body>
 <th:block th:fragment="navigator">
-    <nav class="site-header sticky-top py-1">
-        <div class="container d-flex flex-column flex-md-row justify-content-between">
-            <a class="py-2" href="#">
-                <!--<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"-->
-                <!--stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img"-->
-                <!--viewBox="0 0 24 24" focusable="false">-->
-                <!--<title>Security</title>-->
-                <!---->
-                <!--<circle cx="12" cy="12" r="10"/>-->
-                <!--<path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/>-->
-                <!--</svg>-->
-                <img th:src="@{/image/logo2.png}" class="col-md-1">
-            </a>
-            <a class="py-2 d-none d-md-inline-block" th:href="@{/}">Home</a>
-            <a class="py-2 d-none d-md-inline-block" sec:authorize="hasRole('ADMIN')" th:href="@{/tylkodlakozakow}">Kozaki</a>
-            <a class="py-2 d-none d-md-inline-block" th:href="@{/admin/account/list}">Account list</a>
-            <div class="py-2 d-none d-md-inline-block">
-                <a class="maj-2 d-none d-md-inline-block" sec:authorize="!isAuthenticated()"
-                   th:href="@{/login}">Login</a>
-                <a class="maj-2 d-none d-md-inline-block" sec:authorize="!isAuthenticated()"
-                   th:href="@{/user/register}">Register</a>
-                <a class="maj-2 d-none d-md-inline-block" sec:authorize="isAuthenticated()"
-                   th:href="@{/logout}">Logout</a>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+        <a class="navbar-brand filipNavbar" th:href="@{/}">
+            <img class="logo" th:src="@{/image/logo.png}"
+                 style="margin-left: 1px"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
+                aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link profile" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                       aria-expanded="true" style="margin-right: 10px" sec:authorize="isAuthenticated()"></a>
+                    <div class="dropdown-menu menudd ">
+                        <a class="dropdown-item dropListElement" href="#"><p class="h6">Edit</p></a>
+                        <a class="dropdown-item dropListElement" href="#"><p class="h6">Donate</p></a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item dropListElement" th:href="@{/logout}"><p class="h6">Logout</p></a>
+                    </div>
+                </li>
+                <li class="nav-item" sec:authorize="!isAuthenticated()">
+                    <a class="nav-link login" role="button" th:href="@{/login}" style="margin-right: 10px"></a>
+                </li>
+            </ul>
         </div>
     </nav>
 </th:block>
 
 
-<th:block th:fragment="footer" >
-    <footer class="container footer" >
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2019-2020 F.Trela & P.Stefanowski, Inc. &middot; <a href="#">Privacy</a> &middot; <a
-                href="#">Terms</a></p>
+<th:block th:fragment="footer">
+    <footer class="footer mt-auto py-3">
+        <div class="container">
+            <p class="float-right"><a href="#">Back to top</a></p>
+            <p>&copy; 2019-2020 F.Trela & P.Stefanowski, Inc. &middot; <a href="#">Privacy</a> &middot; <a
+                    href="#">Terms</a></p>
+        </div>
     </footer>
 </th:block>
 
