--- a/src/main/resources/templates/login-form.html
+++ b/src/main/resources/templates/login-form.html
@@ -5,37 +5,25 @@
     <title>Login form</title>
     <th:block th:replace="fragments :: link-styles" th:remove="tag"/>
 </head>
-<body>
+<body class="bg text-center">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
 <div class="container">
-    <h1>Login form</h1>
-    <form th:action="@{/login}" method="post">
-        <div class="row col-12 form-container">
-            <div class="row col-md-12 form-input-row">
-                <div class="col-md-6">
-                    <label for="username">Username:</label>
-                </div>
-                <div class="col-md-6">
-                    <input class="form-control" type="text" id="username" th:name="username">
-                </div>
-            </div>
-            <div class="row col-md-12 form-input-row">
-                <div class="col-md-6">
-                    <label for="password">Password:</label>
-                </div>
-                <div class="col-md-6">
-                    <input class="form-control" type="password" id="password" th:name="password">
-                </div>
-            </div>
-            <div class="row col-md-12 form-button-row">
-                <div class="col-md-6">
-                    <button type="reset" class="btn btn-warning offset-3 col-md-6">Reset</button>
-                </div>
-                <div class="col-md-6">
-                    <button type="submit" class="btn btn-primary offset-3 col-md-6">Submit</button>
-                </div>
+    <img class="img-fluid" th:src="@{/image/sign.png}" width="340" height="340" style="margin-top: 100px">
+    <form th:action="@{/login}" method="post" class="form-signin">
+        <div class="col-md-5" style="margin-left: 30%">
+            <label for="username" class="sr-only">Username</label>
+            <input type="text" id="username" class="form-control" placeholder="Username" th:name="username" required
+                   autofocus>
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" th:name="password"
+                   required>
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" value="remember-me"> Remember me
+                </label>
             </div>
         </div>
+        <button class="btn  signin" type="submit"></button>
     </form>
 </div>
 <th:block th:replace="fragments :: footer" th:remove="tag"/>
