--- a/src/main/resources/templates/registration-form.html
+++ b/src/main/resources/templates/registration-form.html
@@ -5,50 +5,59 @@
     <title>Registration form</title>
     <th:block th:replace="fragments :: link-styles" th:remove="tag"/>
 </head>
-<body>
+<body class="bg text-center">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
-<div class="container">
-    <h1>Registration form</h1>
-    <form th:action="@{/user/register}" method="post" th:object="${newAccount}">
-        <div class="row col-12 form-container">
-            <div th:if="${errorMessage != null}" class="row col-md-12 form-input-row">
-                <div class="col-md-12 alert alert-danger" th:text="${errorMessage}"></div>
-            </div>
-            <div class="row col-md-12 form-input-row">
-                <div class="col-md-6">
-                    <label for="username">Username:</label>
-                </div>
-                <div class="col-md-6">
-                    <input class="form-control" type="text" id="username" th:field="*{username}">
-                </div>
-            </div>
-            <div class="row col-md-12 form-input-row">
-                <div class="col-md-6">
-                    <label for="password">Password:</label>
-                </div>
-                <div class="col-md-6">
-                    <input class="form-control" type="password" id="password" th:field="*{password}">
-                </div>
-            </div>
-            <div class="row col-md-12 form-input-row">
-                <div class="col-md-6">
-                    <label for="password-confirm">Password confirm:</label>
-                </div>
-                <div class="col-md-6">
-                    <input class="form-control" type="password" id="password-confirm" th:name="passwordConfirm">
-                </div>
-            </div>
-            <div class="row col-md-12 form-button-row">
-                <div class="col-md-6">
-                    <button type="reset" class="btn btn-warning offset-3 col-md-6">Reset</button>
-                </div>
-                <div class="col-md-6">
-                    <button type="submit" class="btn btn-primary offset-3 col-md-6">Submit</button>
-                </div>
-            </div>
+<center>
+    <div class="row col-md-5" style="margin-top: 100px">
+        <img th:src="@{/image/registration.png}" class="img-fluid rounded">
+    </div>
+</center>
+<form id="form" th:action="@{/user/register}" method="post" th:object="${newAccount}" style="margin-left: 27%">
+    <div th:if="${errorMessage != null}" class="row col-md-8 form-input-row">
+        <div class="col-md-12 alert alert-danger" th:text="${errorMessage}"></div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-4">
+            <label for="exampleInputEmail1"><p class="h6">Username</p></label>
+            <input type="text" class="form-control" id="exampleInputUsername"
+                   placeholder="Enter Username" minlength="5" maxlength="30" th:field="*{username}" aria-describedby="userHelp">
+            <small id="userHelp" class="form-text text-muted">This will be your login.
+            </small>
         </div>
-    </form>
-</div>
+        <div class="form-group col-md-4">
+            <label for="exampleInputPassword1"><p class="h6">Password</p></label>
+            <input type="password" class="form-control" minlength="6"  id="exampleInputPassword1" placeholder="Password"
+                   th:field="*{password}">
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-4">
+            <label for="exampleInputEmail1"><p class="h6">Email address</p></label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                   placeholder="Enter email" th:field="*{userEmail}">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.
+            </small>
+        </div>
+        <div class="form-group col-md-4">
+            <label for="exampleInputEmail1"><p class="h6">Phone Number</p></label>
+            <input type="text" class="form-control" id="phoneNumber"
+                   placeholder="+ 48" th:field="*{phone}">
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-4">
+            <label for="exampleInputEmail1"><p class="h6">Name</p></label>
+            <input type="text" class="form-control" id="name"
+                   placeholder="Enter Name" th:field="*{name}">
+        </div>
+        <div class="form-group col-md-4">
+            <label for="exampleInputEmail1"><p class="h6">Surname</p></label>
+            <input type="text" class="form-control" id="surname"
+                   placeholder="Enter Surname" th:field="*{surname}">
+        </div>
+    </div>
+    <button type="submit" class="btn sumbit" style="margin-right: 33%"></button>
+</form>
 <th:block th:replace="fragments :: footer" th:remove="tag"/>
 <th:block th:replace="fragments :: scripts" th:remove="tag"/>
 </body>
