--- a/src/main/resources/templates/end-view.html
+++ b/src/main/resources/templates/end-view.html
@@ -17,6 +17,11 @@
                 <button  type="button" class="btn btn-primary">Back to Questionnaire List</button>
             </a>
         </div>
+    <div class="col-md-12 view overlay zoom animated fadeInDown">
+        <a th:href="@{/}">
+            <button  type="button" class="btn btn-primary">Back to Home Page</button>
+        </a>
+    </div>
 
 </div>
 </center>
