--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
         <img th:src="@{/image/name.png}" class="img-fluid rounded name" style="margin-top: 5%">
         <div class="view overlay">
             <div class="col-md-6 view overlay zoom animated fadeInDown">
-                <a>
+                <a th:href="@{/public/listQuestionnaire}">
                     <img th:src="@{/image/open.png}" class="img-fluid rounded"
                          alt="Responsive image">
                 </a>
