--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
                 </a>
             </div>
             <div class="col-md-6 paddingless view overlay zoom animated fadeInDown delay-1s ">
-                <a th:href="@{/user/login}">
+                <a th:href="@{/questionnaire/list}">
                     <img th:src="@{/image/mySurveys.png}" class="img-fluid rounded"
                          alt="Responsive image">
                 </a>
