--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -35,6 +35,9 @@
                     </div>
                 </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
+                    <a class="nav-link register" role="button" th:href="@{/user/register}"></a>
+                </li>
+                <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link login" role="button" th:href="@{/login}" style="margin-right: 10px"></a>
                 </li>
             </ul>
