--- a/src/main/resources/templates/question-list.html
+++ b/src/main/resources/templates/question-list.html
@@ -5,47 +5,67 @@
     <title>Questionnaire list</title>
     <th:block th:replace="fragments :: link-styles" th:remove="tag"/>
 </head>
-<body>
+<body class="bg text-center">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
-
-<div class="container">
-    <h1>Question list</h1>
-    <div class="row col-md-12">
-        <div class="row col-md-12 list-header-row">
-            <div class="col-xs-4 col-sm-2 col-md-1">Id</div>
-            <div class="col-xs-8 col-sm-4 col-2">Question title</div>
-            <div class="col-xs-12 col-sm-6 col-3">Questionnaire description</div>
-            <div class="col-xs-6 col-sm-2 col-1">Questionnaire adding date</div>
-            <div class="col-xs-6 col-sm-2 col-1">Questionnaire ending date</div>
-            <div class="col-xs-12 col-sm-8 col-4"><!--Buttons--></div>
-        </div>
-        <div th:each="question : ${questions}" class="row col-md-12 list-data-row">
-            <div class="col-1" th:text="${question.getId()}"></div>
-            <div class="col-2" th:text="${question.getTitle()}"></div>
-            <div class="col-3" th:text="${question.getDescription()}"></div>
-            <div class="col-1" th:text="${#temporals.format( question.getAddingDate(),'yyyy-MM-dd HH:mm')}"></div>
-            <div class="col-1" th:text="${#temporals.format( question.getEndingDate(),'yyyy-MM-dd HH:mm')}"></div>
-            <!--<div class="row col-4">-->
-                <!--<div class="col-4">-->
-                    <!--<a th:href="@{/questionnaire/remove/${quest.getId()}}">-->
-                        <!--<button th:disabled="${false}" type="button" class="btn btn-danger">Remove-->
-                        <!--</button>-->
-                    <!--</a>-->
-                <!--</div>-->
-                <!--<div class="col-4">-->
-                    <!--<a th:href="@{/questionnaire/show/${quest.getId()}}">-->
-                        <!--<button th:disabled="${false}" type="button" class="btn btn-primary">Show questions-->
-                        <!--</button>-->
-                    <!--</a>-->
-                <!--</div>-->
-            <!--</div>-->
-
-        </div>
-        <div>
-
-        </div>
-    </div>
+<table class="table table-striped table-dark col-md-10" style="margin-top: 10%; margin-left: 10%">
+    <thead>
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Question</th>
+        <th scope="col">Answers</th>
+        <th scope="col">Correct Answer</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="question,index : ${questions}">
+        <th scope="row" th:text="${index.index}"></th>
+        <td th:text="${question.getContent()}"></td>
+        <td th:text="${question.getPossibleAnswers()}"></td>
+        <td th:text="${question.getCorrectAnswers()}"></td>
+    </tbody>
+</table>
+<div class="row col-md-12 justify-content-center">
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item" th:if="${questions.getNumber() >0}">
+                <a class="page-link"
+                   th:href="@{/author/list(page=${questions.getNumber()-1}, size=${questions.getSize()})}"
+                   aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            <li class="page-item"
+                th:each="number : ${#numbers.sequence(questions.getNumber()-3, questions.getNumber()-1)}"
+                th:if="${number >=0}">
+                <a class="page-link" th:href="@{/author/list(page=${number}, size=${questions.getSize()})}"
+                   th:text="${number + 1}"></a>
+            </li>
+            <li class="page-item"
+                th:each="number : ${#numbers.sequence(questions.getNumber(), questions.getNumber()+3)}"
+                th:if="${number< questions.getTotalPages()}">
+                <a class="page-link" th:href="@{/author/list(page=${number}, size=${questions.getSize()})}"
+                   th:text="${number + 1}"></a>
+            </li>
+            <li class="page-item" th:if="${questions.getNumber() < questions.getTotalPages()-1}">
+                <a class="page-link"
+                   th:href="@{/author/list(page=${questions.getNumber()+1}, size=${questions.getSize()})}">Next</a>
+            </li>
+        </ul>
+    </nav>
 </div>
+<div class="row" style="margin-top: 22%; margin-left: 75%">
+    <a th:href="@{'/question/add/'+${questionnaryID}}">
+        <button type="button" class="btn addQuestion"></button>
+    </a>
+</div>
+<div class="row" style="margin-left: 75%">
+    <a th:href="@{${referer}}">
+        <button type="button" class="btn back"></button>
+    </a>
+</div>
+
+
 <th:block th:replace="fragments :: footer" th:remove="tag"/>
 <th:block th:replace="fragments :: scripts" th:remove="tag"/>
 </body>
