--- a/src/main/resources/templates/questionnarie-from.html
+++ b/src/main/resources/templates/questionnarie-from.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Registration form</title>
+    <title>Questionnarie form</title>
     <th:block th:replace="fragments :: link-styles" th:remove="tag"/>
 </head>
 <body class="bg text-center">
@@ -25,7 +25,7 @@
                    placeholder="Enter Ending Date" th:field="*{endingDate}" aria-describedby="userHelp">
         </div>
         <div class="form-group form-check col-md-3">
-            <input class="form-check-input" type="checkbox" th:default="true" th:field="*{isPrivate}" id="defaultCheck1">
+            <input class="form-check-input" type="checkbox" th:default="false" th:field="*{isPrivate}" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">
                 <p class="h6">Is private</p>
             </label>
