--- a/src/main/resources/templates/start-filling-form.html
+++ b/src/main/resources/templates/start-filling-form.html
@@ -1,49 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Registration form</title>
-    <th:block th:replace="fragments :: link-styles" th:remove="tag"/>
+    <title>$Title$</title>
 </head>
 <body>
-<th:block th:replace="fragments :: navigator" th:remove="tag"/>
-<div class="container">
-    <!--<h1>Question</h1>-->
-    <form th:action="@{/public/fill}" method="post" th:object="${questionnaire}" >
-        <div class="row col-12 form-container">
-            <input type="hidden" th:field="*{id}" th:value="*{id}">
-
-            <div class="row col-md-12 form-input-row">
-                <div class="col-md-6">
-                    <label >Title:</label>
-                </div>
-                <div>
-                    <div class="col-md-6" th:text="${questionnaire.getTitle()}"></div>
-                </div>
-
-            </div>
-
-            <div class="row col-md-12 form-input-row">
-                <div class="col-md-6">
-                    <label for="yourName">Your name:</label>
-                </div>
-                <div class="col-md-6">
-                    <input class="form-control" type="text" id="yourName" th:name="yourName">
-                </div>
-            </div>
-
-            <div class="row col-md-12 form-button-row">
-                <!--<div class="col-md-6">-->
-                    <!--<button type="reset" class="btn btn-warning offset-3 col-md-6">Reset</button>-->
-                <!--</div>-->
-                <div class="col-md-6">
-                    <button type="submit" class="btn btn-primary offset-3 col-md-6">Start the survey</button>
-                </div>
-            </div>
-        </div>
-    </form>
-</div>
-<th:block th:replace="fragments :: footer" th:remove="tag"/>
-<th:block th:replace="fragments :: scripts" th:remove="tag"/>
+$END$
 </body>
 </html>
