--- a/src/main/resources/templates/questionnaire-list.html
+++ b/src/main/resources/templates/questionnaire-list.html
@@ -5,46 +5,77 @@
     <title>Questionnaire list</title>
     <th:block th:replace="fragments :: link-styles" th:remove="tag"/>
 </head>
-<body>
+<body class="bg text-center">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
+<h1 class="display-4" style="color: #966364">Questionnaire list</h1>
 
-<div class="container">
-    <h1>Questionnaire list</h1>
-    <div class="row col-md-12">
-        <div class="row col-md-12 list-header-row">
-            <div class="col-md-1">Id</div>
-            <div class="col-md-2">Title</div>
-            <div class="col-md-3">Description</div>
-            <div class="col-md-2">Adding date</div>
-            <div class="col-md-2">Ending date</div>
-            <div class="col-md-2"><!--Buttons--></div>
-        </div>
-        <div th:each="quest : ${questionnaires}" class="row col-md-12 list-data-row">
-            <div class="col-md-1" th:text="${quest.getId()}"></div>
-            <div class="col-md-2" th:text="${quest.getTitle()}"></div>
-            <div class="col-md-3" th:text="${quest.getDescription()}"></div>
-            <div class="col-md-2" th:text="${#temporals.format( quest.getAddingDate(),'yyyy-MM-dd HH:mm')}"></div>
-            <div class="col-md-2" th:text="${#temporals.format( quest.getEndingDate(),'yyyy-MM-dd HH:mm')}"></div>
-            <div class="row col-md-2">
-                <!--<div class="col-md-6">-->
-                    <!--<a th:href="@{/questionnaire/remove/${quest.getId()}}" sec:authorize="hasRole('ADMIN')">-->
-                        <!--<button th:disabled="${false}" type="button" class="btn btn-danger">Remove-->
-                        <!--</button>-->
-                    <!--</a>-->
-                <!--</div>-->
-                <div class="col-md-6">
-                    <a th:href="@{'/public/fill/'+${quest.getId()}}">
-                        <button th:disabled="${false}" type="button" class="btn btn-primary">Fill</button>
-                    </a>
-                </div>
-            </div>
-
-        </div>
-        <div>
-
-        </div>
-    </div>
+<table class="table table-striped table-dark col-md-10"
+       style="margin-top:1%; margin-left: 10%; background-color: #966364">
+    <thead>
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Title</th>
+        <th scope="col">Description</th>
+        <th scope="col">Adding date</th>
+        <th scope="col">Ending date</th>
+        <th scope="col">Options</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="quest,index : ${questionnaires}">
+        <th scope="row" th:text="1+${index.index}"></th>
+        <td th:text="${quest.getTitle()}"></td>
+        <td th:text="${quest.getDescription()}"></td>
+        <td th:text="${#temporals.format( quest.getAddingDate(),'yyyy-MM-dd HH:mm')}"></td>
+        <td th:text="${#temporals.format( quest.getEndingDate(),'yyyy-MM-dd HH:mm')}"></td>
+        <td>
+            <a th:href="@{'/question/delete/'+${quest.getId()}}" sec:authorize="!hasRole('ADMIN')" class="btn btn-del" role="button"></a>
+            <a th:href="@{'/question/edit/'+${question.getId()}}" class="btn btn-edi" role="button"></a>
+        </td>
+    </tbody>
+</table>
+<div class="row col-md-12 justify-content-center">
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item" th:if="${questions.getNumber() >0}">
+                <a class="page-link"
+                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()-1}, size=${questions.getSize()})}"
+                   aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            <li class="page-item"
+                th:each="number : ${#numbers.sequence(questions.getNumber()-3, questions.getNumber()-1)}"
+                th:if="${number >=0}">
+                <a class="page-link"
+                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"
+                   th:text="${number + 1}"></a>
+            </li>
+            <li class="page-item"
+                th:each="number : ${#numbers.sequence(questions.getNumber(), questions.getNumber()+3)}"
+                th:if="${number< questions.getTotalPages()}">
+                <a class="page-link"
+                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"
+                   th:text="${number + 1}"></a>
+            </li>
+            <li class="page-item" th:if="${questions.getNumber() < questions.getTotalPages()-1}">
+                <a class="page-link"
+                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()+1}, size=${questions.getSize()})}">Next</a>
+            </li>
+        </ul>
+    </nav>
 </div>
+<div class="row" style="margin-left: 75%; margin-bottom: 10%;">
+    <a th:href="@{'/question/add/'+${questionnaryID}}">
+        <button type="button" class="btn addQuestion"></button>
+    </a>
+    <a th:href="@{/questionnaire/list}">
+        <button type="button" class="btn continue"></button>
+    </a>
+</div>
+
+
 <th:block th:replace="fragments :: footer" th:remove="tag"/>
 <th:block th:replace="fragments :: scripts" th:remove="tag"/>
 </body>
