--- a/src/main/resources/templates/questionnaire-list.html
+++ b/src/main/resources/templates/questionnaire-list.html
@@ -30,50 +30,50 @@
         <td th:text="${#temporals.format( quest.getEndingDate(),'yyyy-MM-dd HH:mm')}"></td>
         <td>
             <a th:href="@{'/question/delete/'+${quest.getId()}}" sec:authorize="!hasRole('ADMIN')" class="btn btn-del" role="button"></a>
-            <a th:href="@{'/question/edit/'+${question.getId()}}" class="btn btn-edi" role="button"></a>
+            <a th:href="@{'/question/edit/'+${quest.getId()}}" class="btn btn-edi" role="button"></a>
         </td>
     </tbody>
 </table>
-<div class="row col-md-12 justify-content-center">
-    <nav aria-label="Page navigation example">
-        <ul class="pagination">
-            <li class="page-item" th:if="${questions.getNumber() >0}">
-                <a class="page-link"
-                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()-1}, size=${questions.getSize()})}"
-                   aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
-                </a>
-            </li>
-            <li class="page-item"
-                th:each="number : ${#numbers.sequence(questions.getNumber()-3, questions.getNumber()-1)}"
-                th:if="${number >=0}">
-                <a class="page-link"
-                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"
-                   th:text="${number + 1}"></a>
-            </li>
-            <li class="page-item"
-                th:each="number : ${#numbers.sequence(questions.getNumber(), questions.getNumber()+3)}"
-                th:if="${number< questions.getTotalPages()}">
-                <a class="page-link"
-                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"
-                   th:text="${number + 1}"></a>
-            </li>
-            <li class="page-item" th:if="${questions.getNumber() < questions.getTotalPages()-1}">
-                <a class="page-link"
-                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()+1}, size=${questions.getSize()})}">Next</a>
-            </li>
-        </ul>
-    </nav>
-</div>
-<div class="row" style="margin-left: 75%; margin-bottom: 10%;">
-    <a th:href="@{'/question/add/'+${questionnaryID}}">
-        <button type="button" class="btn addQuestion"></button>
-    </a>
-    <a th:href="@{/questionnaire/list}">
-        <button type="button" class="btn continue"></button>
-    </a>
-</div>
+<!--<div class="row col-md-12 justify-content-center">-->
+    <!--<nav aria-label="Page navigation example">-->
+        <!--<ul class="pagination">-->
+            <!--<li class="page-item" th:if="${questions.getNumber() >0}">-->
+                <!--<a class="page-link"-->
+                   <!--th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()-1}, size=${questions.getSize()})}"-->
+                   <!--aria-label="Previous">-->
+                    <!--<span aria-hidden="true">&laquo;</span>-->
+                    <!--<span class="sr-only">Previous</span>-->
+                <!--</a>-->
+            <!--</li>-->
+            <!--<li class="page-item"-->
+                <!--th:each="number : ${#numbers.sequence(questions.getNumber()-3, questions.getNumber()-1)}"-->
+                <!--th:if="${number >=0}">-->
+                <!--<a class="page-link"-->
+                   <!--th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"-->
+                   <!--th:text="${number + 1}"></a>-->
+            <!--</li>-->
+            <!--<li class="page-item"-->
+                <!--th:each="number : ${#numbers.sequence(questions.getNumber(), questions.getNumber()+3)}"-->
+                <!--th:if="${number< questions.getTotalPages()}">-->
+                <!--<a class="page-link"-->
+                   <!--th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"-->
+                   <!--th:text="${number + 1}"></a>-->
+            <!--</li>-->
+            <!--<li class="page-item" th:if="${questions.getNumber() < questions.getTotalPages()-1}">-->
+                <!--<a class="page-link"-->
+                   <!--th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()+1}, size=${questions.getSize()})}">Next</a>-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</nav>-->
+<!--</div>-->
+<!--<div class="row" style="margin-left: 75%; margin-bottom: 10%;">-->
+    <!--<a th:href="@{'/question/add/'+${questionnaryID}}">-->
+        <!--<button type="button" class="btn addQuestion"></button>-->
+    <!--</a>-->
+    <!--<a th:href="@{/questionnaire/list}">-->
+        <!--<button type="button" class="btn continue"></button>-->
+    <!--</a>-->
+<!--</div>-->
 
 
 <th:block th:replace="fragments :: footer" th:remove="tag"/>
